build/log/idf_py_stdout_output_204665
[1/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/fmon2.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/fmon2.c.obj 
/home/rodrigo/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20240530/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.3.2\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/rodrigo/ic_fmon/fmon2/build/config -I/home/rodrigo/esp/esp-idf/components/newlib/platform_include -I/home/rodrigo/esp/esp-idf/components/freertos/config/include -I/home/rodrigo/esp/esp-idf/components/freertos/config/include/freertos -I/home/rodrigo/esp/esp-idf/components/freertos/config/xtensa/include -I/home/rodrigo/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/rodrigo/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/rodrigo/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/rodrigo/esp/esp-idf/components/freertos/esp_additions/include -I/home/rodrigo/esp/esp-idf/components/esp_hw_support/include -I/home/rodrigo/esp/esp-idf/components/esp_hw_support/include/soc -I/home/rodrigo/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/rodrigo/esp/esp-idf/components/esp_hw_support/dma/include -I/home/rodrigo/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/rodrigo/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/rodrigo/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/home/rodrigo/esp/esp-idf/components/heap/include -I/home/rodrigo/esp/esp-idf/components/log/include -I/home/rodrigo/esp/esp-idf/components/soc/include -I/home/rodrigo/esp/esp-idf/components/soc/esp32 -I/home/rodrigo/esp/esp-idf/components/soc/esp32/include -I/home/rodrigo/esp/esp-idf/components/hal/platform_port/include -I/home/rodrigo/esp/esp-idf/components/hal/esp32/include -I/home/rodrigo/esp/esp-idf/components/hal/include -I/home/rodrigo/esp/esp-idf/components/esp_rom/include -I/home/rodrigo/esp/esp-idf/components/esp_rom/include/esp32 -I/home/rodrigo/esp/esp-idf/components/esp_rom/esp32 -I/home/rodrigo/esp/esp-idf/components/esp_common/include -I/home/rodrigo/esp/esp-idf/components/esp_system/include -I/home/rodrigo/esp/esp-idf/components/esp_system/port/soc -I/home/rodrigo/esp/esp-idf/components/esp_system/port/include/private -I/home/rodrigo/esp/esp-idf/components/xtensa/esp32/include -I/home/rodrigo/esp/esp-idf/components/xtensa/include -I/home/rodrigo/esp/esp-idf/components/xtensa/deprecated_include -I/home/rodrigo/esp/esp-idf/components/lwip/include -I/home/rodrigo/esp/esp-idf/components/lwip/include/apps -I/home/rodrigo/esp/esp-idf/components/lwip/include/apps/sntp -I/home/rodrigo/esp/esp-idf/components/lwip/lwip/src/include -I/home/rodrigo/esp/esp-idf/components/lwip/port/include -I/home/rodrigo/esp/esp-idf/components/lwip/port/freertos/include -I/home/rodrigo/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/rodrigo/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/rodrigo/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/rodrigo/ic_fmon/fmon2/components/mlx90640_redar -I/home/rodrigo/esp/esp-idf/components/driver/deprecated -I/home/rodrigo/esp/esp-idf/components/driver/i2c/include -I/home/rodrigo/esp/esp-idf/components/driver/touch_sensor/include -I/home/rodrigo/esp/esp-idf/components/driver/twai/include -I/home/rodrigo/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/rodrigo/esp/esp-idf/components/esp_pm/include -I/home/rodrigo/esp/esp-idf/components/esp_ringbuf/include -I/home/rodrigo/esp/esp-idf/components/esp_driver_gpio/include -I/home/rodrigo/esp/esp-idf/components/esp_driver_pcnt/include -I/home/rodrigo/esp/esp-idf/components/esp_driver_gptimer/include -I/home/rodrigo/esp/esp-idf/components/esp_driver_spi/include -I/home/rodrigo/esp/esp-idf/components/esp_driver_mcpwm/include -I/home/rodrigo/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/home/rodrigo/esp/esp-idf/components/esp_driver_i2s/include -I/home/rodrigo/esp/esp-idf/components/esp_driver_sdmmc/include -I/home/rodrigo/esp/esp-idf/components/sdmmc/include -I/home/rodrigo/esp/esp-idf/components/esp_driver_sdspi/include -I/home/rodrigo/esp/esp-idf/components/esp_driver_sdio/include -I/home/rodrigo/esp/esp-idf/components/esp_driver_dac/include -I/home/rodrigo/esp/esp-idf/components/esp_driver_rmt/include -I/home/rodrigo/esp/esp-idf/components/esp_driver_tsens/include -I/home/rodrigo/esp/esp-idf/components/esp_driver_sdm/include -I/home/rodrigo/esp/esp-idf/components/esp_driver_i2c/include -I/home/rodrigo/esp/esp-idf/components/esp_driver_uart/include -I/home/rodrigo/esp/esp-idf/components/vfs/include -I/home/rodrigo/esp/esp-idf/components/esp_driver_ledc/include -I/home/rodrigo/esp/esp-idf/components/esp_driver_parlio/include -I/home/rodrigo/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/rodrigo/esp/esp-idf/components/nvs_flash/include -I/home/rodrigo/esp/esp-idf/components/spi_flash/include -I/home/rodrigo/esp/esp-idf/components/esp_partition/include -I/home/rodrigo/esp/esp-idf/components/esp_netif/include -I/home/rodrigo/esp/esp-idf/components/esp_event/include -I/home/rodrigo/esp/esp-idf/components/esp_wifi/include -I/home/rodrigo/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/rodrigo/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/rodrigo/esp/esp-idf/components/esp_wifi/include/local -I/home/rodrigo/esp/esp-idf/components/esp_phy/include -I/home/rodrigo/esp/esp-idf/components/esp_phy/esp32/include -I/home/rodrigo/esp/esp-idf/components/esp_http_client/include -I/home/rodrigo/ic_fmon/fmon2/managed_components/espressif__esp-tflite-micro -I/home/rodrigo/ic_fmon/fmon2/managed_components/espressif__esp-tflite-micro/third_party/gemmlowp -I/home/rodrigo/ic_fmon/fmon2/managed_components/espressif__esp-tflite-micro/third_party/flatbuffers/include -I/home/rodrigo/ic_fmon/fmon2/managed_components/espressif__esp-tflite-micro/third_party/ruy -I/home/rodrigo/ic_fmon/fmon2/managed_components/espressif__esp-tflite-micro/third_party/kissfft -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/rodrigo/ic_fmon/fmon2=. -fmacro-prefix-map=/home/rodrigo/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -DTF_LITE_STATIC_MEMORY -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/fmon2.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/fmon2.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/fmon2.c.obj -c /home/rodrigo/ic_fmon/fmon2/main/fmon2.c
/home/rodrigo/ic_fmon/fmon2/main/fmon2.c: In function 'app_main':
/home/rodrigo/ic_fmon/fmon2/main/fmon2.c:40:37: error: too few arguments to function 'image_size'
   40 |         https_post_image(bmp_image, image_size(), cnn_result);
      |                                     ^~~~~~~~~~
In file included from /home/rodrigo/ic_fmon/fmon2/main/fmon2.c:7:
/home/rodrigo/ic_fmon/fmon2/main/capture_image.h:13:5: note: declared here
   13 | int image_size(int *bmp_size);
      |     ^~~~~~~~~~
[2/10] Performing build step for 'bootloader'
[1/1] cd /home/rodrigo/ic_fmon/fmon2/build/bootloader/esp-idf/esptool_py && /home/rodrigo/.espressif/python_env/idf5.3_py3.12_env/bin/python /home/rodrigo/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/rodrigo/ic_fmon/fmon2/build/bootloader/bootloader.bin
Bootloader binary size 0x6880 bytes. 0x780 bytes (7%) free.
[3/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/capture_image.c.obj
/home/rodrigo/ic_fmon/fmon2/main/capture_image.c: In function 'create_bmp_from_grayscale':
/home/rodrigo/ic_fmon/fmon2/main/capture_image.c:95:16: warning: passing argument 1 of 'image_size' makes pointer from integer without a cast [-Wint-conversion]
   95 |     image_size(file_size);
      |                ^~~~~~~~~
      |                |
      |                int
In file included from /home/rodrigo/ic_fmon/fmon2/main/capture_image.c:3:
/home/rodrigo/ic_fmon/fmon2/main/capture_image.h:13:21: note: expected 'int *' but argument is of type 'int'
   13 | int image_size(int *bmp_size);
      |                ~~~~~^~~~~~~~
/home/rodrigo/ic_fmon/fmon2/main/capture_image.c: In function 'image_size':
/home/rodrigo/ic_fmon/fmon2/main/capture_image.c:143:12: warning: returning 'int *' from a function with return type 'int' makes integer from pointer without a cast [-Wint-conversion]
  143 |     return bmp_size;
      |            ^~~~~~~~
ninja: build stopped: subcommand failed.
